<resources>
    <string name="app_name">aksamedia_test</string>
    <string name="dummy_title">Gratis Materi Belajar\nMenjadi Seller Handal</string>
    <string name="dummy_desc">Nggak bisa jualan?\nJangan khawatir, Tokorame akan membimbing kamu hingga menjadi seller langsung dari ahlinya</string>
    <string name="second_title">Ribuan Produk\ndengan Kualitas Terbaik</string>
    <string name="second_desc">Tokorame menyediakan ribuan produk dengan kualitas terbaik dari seller terpercaya</string>
    <string name="third_title">Toko Online Unik\nUntuk Kamu Jualan</string>
    <string name="third_desc">Subdomain unik dan toko online profesional\nsiap pakai</string>
    <string name="next">Selanjutnya</string>
    <string name="skip">Lewati</string>
    <string name="button_back">Button Back</string>
    <string name="button_cart">Button Cart</string>
    <string name="button_download">Button Download</string>
    <string name="txtNew">NEW</string>
    <string name="new_product">Product Baru</string>
    <string name="button_share">Button Share</string>
    <string name="dummy_product_name">Beauty Set by Irvie</string>
    <string name="dummy_product_owner">Irvie group official</string>
    <string name="txtPriceCustomer">Harga Customer</string>
    <string name="dummy_price_customer">Rp178.000</string>
    <string name="dummy_price_reseller">Rp142.400</string>
    <string name="txtPriceReseller">Harga Reseller</string>
    <string name="commission">Komisi</string>
    <string name="dummy_commission">Rp35.600</string>
    <string name="dummy_percent">(20%)</string>
    <string name="size">Ukuran</string>
    <string name="paket_1">Paket 1</string>
    <string name="paket_2">Paket 2</string>
    <string name="color">Warna</string>
    <string name="txtStock">Stok :</string>
    <string name="dummy_stock">99+ pcs</string>
    <string name="description">Deskripsi</string>
    <string name="implicit">Selengkapnya</string>
    <string name="hide">Sembunyikan</string>
    <string name="others_product">Produk lain dari Irvie group official</string>
    <string name="dummy_commission_percent">30%</string>
    <string name="share_product">Bagikan Produk</string>
    <string name="same_product">Produk Serupa</string>
    <string name="add_to_shop">Tambahkan ke toko</string>
    <string name="short_text">*New Material*\nTerbuat dari bahan 100% Katun Linen yang\nmembuat nyaman jika digunakan.\nMenggunakan fit Relaxed Fit.\n-\nSIZE CHART RELAXED SHIRT....</string>
    <string name="full_text">*New Material*\nTerbuat dari bahan 100% Katun Linen yang membuat nyaman jika digunakan.\nMenggunakan fit Relaxed Fit.\n-\nSIZE CHART RELAXED SHIRT\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="text_and_link">Teks dan Link</string>
    <string name="txtImage">Gambar</string>
</resources>