<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="18dp">

    <LinearLayout
        android:id="@+id/txtNewProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:paddingVertical="5dp"
        android:paddingHorizontal="9dp"
        android:background="@drawable/background_new_product"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNew"
            android:textSize="16sp"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_product"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/inter"
            android:textColor="@color/black"/>

    </LinearLayout>
    
    <ImageView
        android:id="@+id/ic_share"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/button_share"
        android:src="@drawable/ic_share"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/dummy_product_name"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/txtNewProduct"
        app:layout_constraintTop_toBottomOf="@id/txtNewProduct"/>

    <TextView
        android:id="@+id/productOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/dummy_product_owner"
        android:fontFamily="@font/inter_medium"
        android:textColor="#848C8B"
        app:layout_constraintStart_toStartOf="@id/productName"
        app:layout_constraintTop_toBottomOf="@id/productName"/>

    <LinearLayout
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:paddingHorizontal="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productOwner"
        app:layout_constraintStart_toStartOf="@id/txtNewProduct">

        <LinearLayout
            android:id="@+id/customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/priceCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/dummy_price_customer"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtPriceCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txtPriceCustomer"
                android:fontFamily="@font/inter"
                android:textColor="#697170" />

        </LinearLayout>

        <View
            android:id="@+id/line"
            android:layout_width="2dp"
            android:layout_height="44dp"
            android:background="#697170"
            android:layout_gravity="center"
            android:layout_marginStart="15dp" />

        <LinearLayout
            android:id="@+id/reseller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="10dp"
            android:paddingHorizontal="16dp"
            android:layout_marginStart="15dp">

            <TextView
                android:id="@+id/priceReseller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/dummy_price_reseller"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtPriceReseller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:text="@string/txtPriceReseller"
                android:fontFamily="@font/inter"
                android:textColor="#697170" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:background="@drawable/background_commision"
        app:layout_constraintTop_toBottomOf="@id/price">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/commission"
            android:textColor="#363939"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:layout_marginHorizontal="3dp"
            android:text="@string/dummy_commission"
            android:textSize="18sp"
            android:textColor="#363939"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/dummy_percent"
            android:textColor="#363939"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>