<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="18dp"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/button_back" />

    <ImageView
        android:id="@+id/btnDownload"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_download"
        app:layout_constraintEnd_toStartOf="@+id/btnCart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/button_download" />

    <ImageView
        android:id="@+id/btnCart"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="18dp"
        android:src="@drawable/shopping_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/button_cart" />


</androidx.constraintlayout.widget.ConstraintLayout>