<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="25dp"
    android:layout_marginHorizontal="18dp"
    android:background="@drawable/background_choose_type">

    <TextView
        android:id="@+id/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <RadioGroup
        android:id="@+id/radioGroupSize"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/size">

        <RadioButton
            android:id="@+id/radioPaket1"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/paket_1"
            android:layout_marginEnd="12dp"
            android:background="@drawable/radio_selector"
            android:textColor="@drawable/radio_text_selector"
            android:button="@android:color/transparent"
            android:fontFamily="@font/inter_medium"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/radioPaket2"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/paket_2"
            android:background="@drawable/radio_selector"
            android:textColor="@drawable/radio_text_selector"
            android:button="@android:color/transparent"
            android:fontFamily="@font/inter_medium"
            android:textSize="16sp"/>

    </RadioGroup>

    <TextView
        android:id="@+id/txtColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/color"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupSize"/>

    <RadioGroup
        android:id="@+id/radioGroupColor"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtColor">

        <RadioButton
            android:id="@+id/radioColorSkin"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/radio_skin_selector"
            android:button="@android:color/transparent"
            android:fontFamily="@font/inter_medium"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/radioColorBrown"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:textAlignment="center"
            android:background="@drawable/radio_brown_selector"
            android:button="@android:color/transparent"
            android:fontFamily="@font/inter_medium"
            android:textSize="16sp"/>

    </RadioGroup>

    <LinearLayout
        android:id="@+id/stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/txtColor"
        app:layout_constraintTop_toBottomOf="@id/radioGroupColor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtStock"
            android:textColor="@color/primary_color"
            android:fontFamily="@font/inter"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_stock"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/primary_color"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>