<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginRight="20dp">

    <FrameLayout
        android:id="@+id/contentProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:scaleType="centerCrop"
            android:src="@drawable/detail_product"
            app:shapeAppearanceOverlay="@style/ContentImageProductScroll" />

        <include
            layout="@layout/commission_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="6dp" />
        
        <ImageView
            android:id="@+id/new_tag"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/new_tag"
            android:layout_gravity="end"
            android:layout_marginEnd="7dp"/>

    </FrameLayout>

    <TextView
        android:id="@+id/nameProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dummy_product_name"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/inter_medium"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/contentProduct"/>

    <TextView
        android:id="@+id/txtPriceReseller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtPriceReseller"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter"
        android:textSize="10sp"
        android:textColor="#697170"
        app:layout_constraintTop_toBottomOf="@id/nameProduct"/>

    <TextView
        android:id="@+id/priceReseller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_price_reseller"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/txtSuccess"
        app:layout_constraintTop_toBottomOf="@id/txtPriceReseller"/>

    <LinearLayout
        android:id="@+id/product_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/priceReseller"
        app:layout_constraintBottom_toBottomOf="@id/priceReseller">

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_stok"/>

        <TextView
            android:id="@+id/stockProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_stock"
            android:fontFamily="@font/inter"
            android:textColor="#697170"
            android:textSize="10sp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="2dp"
            app:layout_constraintTop_toBottomOf="@id/txtPriceReseller"/>

    </LinearLayout>
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnShare"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/background_button_product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/share_product"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:fontFamily="@font/inter"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/priceReseller"/>
</androidx.constraintlayout.widget.ConstraintLayout>