<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="20dp"
    android:paddingBottom="60dp"
    android:paddingHorizontal="20dp"
    android:background="@drawable/background_content_detail_product">
    
    <ImageView
        android:id="@+id/ic_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/share_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/inter_medium"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/share_product"
        app:layout_constraintTop_toTopOf="@id/ic_close"
        app:layout_constraintBottom_toBottomOf="@id/ic_close"
        app:layout_constraintStart_toEndOf="@id/ic_close"/>

    <TextView
        android:id="@+id/txtLinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:textColor="@color/black"
        android:text="@string/text_and_link"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="@id/ic_close"
        app:layout_constraintTop_toBottomOf="@id/ic_close"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E2E8F0"
        app:layout_constraintTop_toBottomOf="@id/txtLinks"/>

    <TextView
        android:id="@+id/txtImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:textColor="@color/black"
        android:text="@string/txtImage"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="@id/txtLinks"
        app:layout_constraintTop_toBottomOf="@id/line"/>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E2E8F0"
        app:layout_constraintTop_toBottomOf="@id/txtImage"/>


</androidx.constraintlayout.widget.ConstraintLayout>