<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.welcome.WelcomeActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/welcomeViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
            android:id="@+id/dots_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:dotsColor="@color/white"
            app:dotsCornerRadius="26dp"
            app:dotsSize="4dp"
            app:dotsSpacing="4dp"
            app:dotsWidthFactor="5.0"
            app:selectedDotColor="@color/white"
            app:progressMode="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/contentWelcome"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/contentWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/background_welcome"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/titleWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="18dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/dummy_title"
                android:textAlignment="center"
                android:textColor="@color/primary_color"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/descWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="22dp"
                android:fontFamily="@font/inter"
                android:lineHeight="16dp"
                android:layout_marginTop="18dp"
                android:text="@string/dummy_desc"
                android:textAlignment="center"
                android:textColor="@color/primary_color"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="20dp"
                android:text="@string/next"
                android:textAllCaps="false"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/white"
                android:background="@drawable/background_button_welcome"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>